objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Corporate__c</fullName>
        <label>Corporate</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Corporates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Agency_Name__c</fullName>
        <formula>Travel_Agency__r.Account_Name__c</formula>
        <label>Travel Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Agency_Navitaire_Id__c</fullName>
        <formula>Travel_Agency__r.Navitaire_ID__c</formula>
        <label>Travel Agency Navitaire Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Agency__c</fullName>
        <label>Travel Agency</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Travel_Agencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Partner</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>